# nexus-zero

./: .env.example  .gitignore  .gre-workflow.md  AGENTS.md  IMPLEMENTATION_PLAN.md  PRD.md  PROGRESS.md  PROGRESS.md.backup.20260203_173455  PROJECT_STATE.json  PROMPT.md  PROMPT_BUILD.md  README.md  alembic.ini  pyproject.toml  ralph-build.sh  ralph-plan.sh  ralph-supervisor.py
.keys/: keys.json
agents/: prd.json
alembic/: env.py
alembic/versions/: 001_initial_migration.py
scripts/: key_manager.py
src/: __init__.py  config.py  database.py  memory_db.py
src/analytics/: __init__.py  cli.py  queries.py  stats.py
src/api/: main.py
src/brief/: __init__.py  generator.py  publisher.py
src/classifier/: __init__.py  classifier.py
src/fetcher/: __init__.py  base.py  reddit_fetcher.py  rss_fetcher.py  x_fetcher.py  xiaohongshu_fetcher.py
src/models/: __init__.py  base.py  brief.py  content.py  log.py  score.py  source.py  tag.py
src/scheduler/: __init__.py  cli.py  scheduler.py
src/scorer/: __init__.py  base.py  heat_scorer.py  potential_scorer.py
src/web/: __init__.py
web/: package.json  vitest.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/briefs/latest/: route.ts
web/src/app/api/stats/: route.ts
web/src/components/: ActivityFeed.tsx  BriefCard.tsx  BriefPanel.tsx  Header.tsx  HeroSection.tsx  StatsGrid.tsx  StatsOverview.tsx
web/src/components/__tests__/: BriefCard.test.tsx
web/src/lib/: api.ts
web/src/test/: setup.ts
